# unicorn-hpc

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  local.sh  regen.sh  unicorn.pc.in
contrib/convert/: Makefile  convert.c
contrib/extract/: Makefile  extract.cpp
doc/manual/: Makefile  bibliography.bib  fenicsmanual.cls  unicorn-user-manual.tex
doc/manual/chapters/: license.tex
doc/manual/eps/: unicorn.eps
src/: AdaptiveRefinement.cpp  AdaptiveRefinementProjectScalar.cpp  AdaptiveRefinementProjectVector.cpp  DataSetSampler.cpp  ElasticSmoother.cpp  Elasticity2D.cpp  Elasticity3D.cpp  ElasticityJac2D.cpp  ElasticityJac3D.cpp  ElasticityStress2D.cpp  ElasticityStress3D.cpp  EquiAffineMap.cpp  ErrorEstimate.cpp  Laplacian2D.cpp  Laplacian3D.cpp  LaplacianSmoother.cpp  Makefile.am  Makefile.in  MeshBC.cpp  MeshQuality.cpp  NewDirichletBC.cpp  NewSlipBC.cpp  NodeNormal.cpp  Project.cpp  Projection2D.cpp  Projection3D.cpp  SlipBC.cpp  SpaceTimeFunction.cpp  TimeDependentPDE.cpp  UniParameters.cpp  init.cpp  util.cpp
src/forms/: AdaptiveRefinementProjectScalar.form  AdaptiveRefinementProjectVector.form  Elasticity2D.form  Elasticity3D.form  ElasticityJac2D.form  ElasticityJac3D.form  ElasticityStress2D.form  ElasticityStress3D.form  Laplacian2D.form  Laplacian3D.form  Projection2D.form  Projection3D.form  regen.sh
src/unicorn/: AdaptiveRefinement.h  AdaptiveRefinementProjectScalar.h  AdaptiveRefinementProjectVector.h  DataSetSampler.h  ElasticSmoother.h  Elasticity2D.h  Elasticity3D.h  ElasticityJac2D.h  ElasticityJac3D.h  ElasticityStress2D.h  ElasticityStress3D.h  EquiAffineMap.h  ErrorEstimate.h  Laplacian2D.h  Laplacian3D.h  LaplacianSmoother.h  Makefile.am  Makefile.in  MeshBC.h  MeshQuality.h  NewDirichletBC.h  NewSlipBC.h  NodeNormal.h  Project.h  Projection2D.h  Projection3D.h  SlipBC.h  SpaceTimeFunction.h  TimeDependentPDE.h  UniParameters.h  init.h  unicorn_config.h.in  util.h
test/: Makefile.am
test/elastic-smoother/: Makefile  README  cubemesh.xml  main.cpp  testcell3D.xml
test/icns/: Makefile.am  chkp_restart_test  icns_chkp_restart_test  icns_solver_test  main.cpp  parameters  solver_test
test/unicorn/: Makefile.am  minimal.cpp  minimal.sh  minimal_solver_test  parameters  usquare.xml
ucsolver/fsi/: Makefile  NSESolver.cpp
ucsolver/fsi/cylinder2D/: main.cpp  mesh.xml  parameters  structure.xml
ucsolver/fsi/plate3D/: Makefile  main.cpp  parameters  structure.xml
ucsolver/fsi/swenox/: Makefile  main.cpp  parameters  structure.xml
ucsolver/fsi/unicorn/: Drag2D.cpp  Drag2D.form  Drag2D.h  Drag2D.py  Drag3D.form  Drag3D.h  Makefile  NSEContinuity2D.cpp  NSEContinuity2D.form  NSEContinuity2D.h  NSEContinuity2D.py  NSEContinuity3D.cpp  NSEContinuity3D.form  NSEContinuity3D.h  NSEDensity2D.cpp  NSEDensity2D.form  NSEDensity2D.h  NSEDensity2D.py  NSEDensity3D.cpp  NSEDensity3D.form  NSEDensity3D.h  NSEDensity3D.py  NSEDualContinuity3D.cpp  NSEDualContinuity3D.h  NSEDualGradient3D.cpp  NSEMomentum2D.cpp  NSEMomentum2D.form  NSEMomentum2D.h  NSEMomentum2D.py  NSEMomentum3D.cpp  NSEMomentum3D.form  NSEMomentum3D.h  NSEMomentum3D.py  NSEResContinuity3D.form  NSEResContinuity3D.h  NSEResMomentum3D.cpp  NSEResMomentum3D.form  NSEResMomentum3D.h  NSESolver.h  NavierStokesStress2D.cpp  (+5 more)
ucsolver/icns/: Makefile  NSESolver.cpp
ucsolver/icns-newton/: NSESolver.cpp
ucsolver/icns-newton/cylinder/: main.cpp
ucsolver/icns-newton/cylinder2D/: Makefile  main.cpp  parameters
ucsolver/icns-newton/unicorn/: Drag2D.cpp  Drag3D.cpp  Makefile  NSEContinuity2D.cpp  NSEContinuity2D.form  NSEContinuity2D.h  NSEContinuity3D.cpp  NSEContinuity3D.form  NSEContinuity3D.h  NSEDualContinuity3D.form  NSEDualGradient3D.h  NSEDualMomentum3D.cpp  NSEDualMomentum3D.h  NSEMomentum2D.cpp  NSEMomentum2D.form  NSEMomentum2D.h  NSEMomentum3D.cpp  NSEMomentum3D.form  NSEMomentum3D.h  NSEResContinuity3D.cpp  NSESolver.h
ucsolver/icns/cube/: Makefile  main.cpp  mesh.xml  parameters
ucsolver/icns/cylinder/: Makefile  main.cpp  parameters
ucsolver/icns/unicorn/: Drag3D.h  Drag3D_Int.cpp  Drag3D_Int.form  Drag3D_Int.h  Makefile  NSEContinuity3D.cpp  NSEContinuity3D.form  NSEContinuity3D.h  NSEDualContinuity3D.cpp  NSEDualContinuity3D.form  NSEDualContinuity3D.h  NSEDualGradient3D.form  NSEDualGradient3D.h  NSEDualMomentum3D.cpp  NSEDualMomentum3D.form  NSEDualMomentum3D.h  NSEMomentum3D.cpp  NSEMomentum3D.form  NSEMomentum3D.h  NSEResContinuity3D.h  NSEResMomentum3D.h  NSESolver.h
ucsolver/icns/wing/: Makefile  main.cpp  parameters
