EXTRA_DIST = AdaptiveRefinement.h ErrorEstimate.h  init.h  NodeNormal.h  SlipBC.h\
	NewSlipBC.h NewDirichletBC.h SpaceTimeFunction.h\
	UniParameters.h TimeDependentPDE.h Project.h EquiAffineMap.h\
	MeshQuality.h util.h DataSetSampler.h\
	Elasticity2D.h Elasticity3D.h ElasticityJac2D.h ElasticityJac3D.h \
	ElasticityStress2D.h ElasticityStress3D.h ElasticSmoother.h \
	Projection2D.h Projection3D.h ElasticSmoother.h	
